# monitoring-plugins

./: .gitignore  LICENCE  Makefile  Makefile.am  README.md  config.h.in  configure.ac
include/: icinga.h
plugins/: Makefile.am  check_meminfo.c  check_nofiles_limits.c  check_procstat.c
templates/: Makefile.am  check_meminfo.php
